--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,41 @@
   height: 46px;
   border-radius: 50%;
 }
+
+/* <!-- ---- Specials ---- --> */
+.special-img span{
+  top: 20px;
+  right: 20px;
+}
+.special-img:hover img{
+  transform: scale(1.2);
+}
+.special-img img{
+  transition: all 0.3s ease;
+}
+
+/* <!-- ---- Banner ---- --> */
+#banner{
+  background: url(../public/images/offer_img.jpg) center/cover;
+}
+#banner .row{
+  min-height: 60vh;
+}
+.banner-content span{
+  font-size: 28px;
+}
+.banner-content h2{
+  font-size: 60px;
+  font-family: var(--lg-font);
+}
+
+/* <!-- ---- Footer ---- --> */
+footer .brand{
+  font-family: var(--lg-font);
+  letter-spacing: 2px;
+}
+
+/* <!-- ---- Product ---- --> */
+#product{
+  padding-top: 104px;
+}
